Implemented restrict API.
